Fix spacing on narrow screens

--- a/vectornotes.client/src/app/all-notes-view/card-list/card-list.component.scss
+++ b/vectornotes.client/src/app/all-notes-view/card-list/card-list.component.scss
@@ -16,6 +16,10 @@
   @media (max-width: 768px) {
     flex-direction: column; /* Stack items vertically on smaller screens */
     align-items: center;
+
+    lantor-collection-selector {
+      margin-bottom: 16px;
+    }
   }
 }
 
