--- a/vectornotes.client/src/app/collection-selector/collection-selector.component.scss
+++ b/vectornotes.client/src/app/collection-selector/collection-selector.component.scss
@@ -1,8 +1,8 @@
+
 .control-button {
   font-size: var(--mat-sys-body-large-size);
   margin-left: 16px;
   margin-right: 16px;
-  margin-bottom: 16px;
 }
 
 mat-form-field {
